Extracting API url to constant